--- a/spring-boot-file-upload-download-rest-api-example-mysql-database-storage/src/main/resources/static/index.html
+++ b/spring-boot-file-upload-download-rest-api-example-mysql-database-storage/src/main/resources/static/index.html
@@ -36,6 +36,19 @@
                         <div id="multipleFileUploadSuccess"></div>
                     </div>
                 </div>
+                
+                
+                 <div class="multiple-upload">
+                    <h3>test</h3>
+                    <form id="hiddenBtnform" name="hiddenBtnform">
+                        <input id="listOfFiles" type="hidden" name="listOfFiles"  value="test.pdf,best.pdf,a.pdf,b.pdf,c.pdf" />
+                        <button type="submit" class="primary submit-btn">Submit</button>
+                    </form>
+                    <div class="upload-response">
+                        <div id="multipleFileUploadError"></div>
+                        <div id="multipleFileUploadSuccess"></div>
+                    </div>
+                </div>
             </div>
         </div>
         <script src="/js/main.js" ></script>
